--- a/ysoserial/ysoserial.csproj
+++ b/ysoserial/ysoserial.csproj
@@ -193,6 +193,7 @@
   <ItemGroup>
     <Compile Include="Generators\BaseActivationFactoryGenerator.cs" />
     <Compile Include="Generators\GetterCompilerResultsGenerator.cs" />
+    <Compile Include="Generators\VeeamCDbCryptoKeyInfoGenerator.cs" />
     <Compile Include="Generators\XamlImageInfo.cs" />
     <Compile Include="Generators\GenericPrincipalGenerator.cs" />
     <Compile Include="Generators\DataSetOldBehaviourFromFileGenerator.cs" />
